EMAT-015 | implement getAiReport by submissionId